<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:text="@string/lifeStory" />

        <Spinner
            android:id="@+id/lifeStorySpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

        <Switch
            android:id="@+id/lifeStorySwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:text="@string/familyTreeline" />

        <Spinner
            android:id="@+id/familyTreeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

        <Switch
            android:id="@+id/familyTreeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:textSize="20sp"
            android:text="@string/spouseLine" />

        <Spinner
            android:id="@+id/spouseSpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

        <Switch
            android:id="@+id/spouseSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:textSize="20sp"
            android:text="@string/mapType" />

        <Spinner
            android:id="@+id/mapSpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

    </LinearLayout>

    <TextView
        android:id="@+id/reSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/resyncData" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/logout" />
</LinearLayout>
