<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:id = "@+id/clickView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/eventPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventPersonName" />

            <TextView
                android:id="@+id/eventNCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventNCity" />

            <TextView
                android:id="@+id/eventCountryNtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventCountryNtime" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
